start test client
